# storageman

./: pyproject.toml
storageman/: bulk_ingest.py  fix_multicompress.py  ingest_indices.py  recompress.py
