[tool.poetry]
name = "storageman"
version = "0.1.0"
description = ""
authors = ["Lars Viklund <zao@zao.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg = {extras = ["binary", "pool"], version = "^3.1.12"}
zstandard = "^0.22.0"

[tool.poetry.scripts]
bulk_ingest = "storageman.bulk_ingest:main"
ingest_indices = "storageman.ingest_indices:main"
recompress = "storageman.recompress:main"
fix_multicompress = "storageman.fix_multicompress:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
